--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <li class="brand"><a href="#"><img src="assets/stockcafe_logo2.png"></a></li>
         <div class="items">
         <li class="active">Home</li>
-        <li>Menu</li>
+        <li><a href="menu.html">Menu</a></li>
         <li ><a href="about_us.html">About Us</a></li>
         <li>Contact Us</li>
         <li><a href="sign_in.html">Sign In</a></li>
